@@ -1,4 +1,4 @@
->$NetBSD: CHANGES-2006,v 1.1817 2006/11/14 15:15:35 joerg Exp $
+>$NetBSD: CHANGES-2006,v 1.1818 2006/11/14 15:56:32 joerg Exp $
 
 Changes to the packages collection and infrastructure in 2006:
 
@@ -5297,3 +5297,7 @@ Changes to the packages collection and infrastructure in 2006:
 	Added x11/xf86vidmodeproto version 2.2.2 [joerg 2006-11-14]
 	Added x11/libXxf86vm version 1.0.1 [joerg 2006-11-14]
 	Updated devel/global to 5.2 [obache 2006-11-14]
+	Added x11/liblbxutil version 1.0.1 [joerg 2006-11-14]
+	Added x11/libxkbui version 1.0.2 [joerg 2006-11-14]
+	Added x11/xf86driproto version 2.0.3 [joerg 2006-11-14]
+	Added x11/xf86dgaproto version 2.0.2 [joerg 2006-11-14]
